--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,22 @@
     <link rel="icon" href="%PUBLIC_URL%/logo/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <meta
+      name="title"
+      content="Odontología de calidad en San Pedro Sula - AP Dental Clinic"
+    />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="En AP Dental Clinic, ofrecemos una amplia gama de servicios odontológicos de calidad en San Pedro Sula. ¡Visítenos hoy mismo para una sonrisa más saludable!"
     />
+    <meta
+      name="keywords"
+      content="odontologia, limpieza Dental, blanqueamiento dental, protesis dental, carillas dentales, diseño de sonrisa, extracciones, caries"
+    />
+    <meta name="author" content="Dra. Angie Paz" />
+    <meta name="robots" content="index, follow" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
