--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
 
     <meta
       name="title"
-      content="Odontología de calidad en San Pedro Sula - AP Dental Clinic"
+      content="Clinica dental en San Pedro Sula - AP Dental Clinic"
     />
     <meta
       name="description"
-      content="En AP Dental Clinic, ofrecemos una amplia gama de servicios odontológicos de calidad en San Pedro Sula. ¡Visítenos hoy mismo para una sonrisa más saludable!"
+      content="Servicios odontológicos en San Pedro Sula. Sonrisa más saludable y mejor calidad de vida. Teléfono: +(504) 9550-1103"
     />
     <meta
       name="keywords"
@@ -20,6 +20,20 @@
     />
     <meta name="author" content="Dra. Angie Paz" />
     <meta name="robots" content="index, follow" />
+
+    <meta
+      name="og:title"
+      content="Clinica dental en San Pedro Sula - AP Dental Clinic"
+    />
+    <meta
+      name="og:description"
+      content="Servicios odontológicos en San Pedro Sula. Sonrisa más saludable y mejor calidad de vida. Teléfono: +(504) 9550-1103"
+    />
+    <meta name="og:url" content="https://apdentalclinic.info/" />
+    <meta
+      name="og:image"
+      content="https://apdentalclinic.info/logo/full_logo_transparent.png"
+    />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -36,7 +50,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>AP Dental Clinic</title>
+    <title>Clinica dental en San Pedro Sula - AP Dental Clinic</title>
     <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
